Stable code